<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorWhiteTrans"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:id="@+id/btn_e_mor"
            android:src="@drawable/e_mor"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:id="@+id/btn_mor"
            android:src="@drawable/morning"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:text="@string/t_e_mor"
            android:textSize="10dp"
            android:textColor="#000000"
            android:layout_weight="1"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:textColor="#000000"
            android:layout_weight="1"
            android:textSize="10dp"
            android:text="@string/t_mor"
             />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageButton
            android:layout_width="wrap_content"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_e_after"
            android:src="@drawable/e_afternoon"/>


        <ImageButton
            android:layout_width="wrap_content"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_after"
            android:src="@drawable/afternoon"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:text="@string/t_e_af"
            android:textSize="10dp"
            android:textColor="#000000"
            android:layout_weight="1"
             />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:textSize="10dp"
            android:textColor="#000000"
            android:text="@string/t_af"
             />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:id="@+id/btn_eve"
            android:src="@drawable/evening"/>


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:id="@+id/btn_night"
            android:src="@drawable/night"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:textColor="#000000"
            android:text="@string/t_ev"
            android:textSize="10dp"
            android:layout_weight="1"
             />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:textSize="10dp"
            android:textColor="#000000"
            android:text="@string/t_night"
             />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:id="@+id/btn_m_night"
            android:src="@drawable/m_night"/>


        <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:src="@drawable/time"/>-->

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:text="@string/t_m_night"
            android:textColor="#000000"
            android:textSize="10dp"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>
